--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <section class="section">
-        <h1 class="title">인공지능 공룡상 테스트 (남자)</h1>
+        <h1 class="title">인공지능 공룡상 테스트</h1>
         <h2 class="subtitle">어떤 공룡과 닮았을까?</h2>
     </section>
     <section class="youtube">
@@ -111,7 +111,7 @@
         // More API functions here:
         // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
         // the link to your model provided by Teachable Machine export panel
-        const URL = "https://teachablemachine.withgoogle.com/models/o9D1N5TN/";
+        const URL = "https://teachablemachine.withgoogle.com/models/mSFC97WGt/";
         let model, webcam, labelContainer, maxPredictions;
         // Load the image model and setup the webcam
         async function init() {
