--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>Hello, world!</title>
     <link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
